# cntext

./: .gitignore  CITATION.cff  CNTEXT_COMPLETE_ANALYSIS.md  ENGLISH_ENHANCEMENTS.md  EXPLORATION_SUMMARY.md  LICENSE  MDA_ANALYSIS_README.md  MDA_FEATURE_MATRIX.md  MDA_QUICK_REFERENCE.md  README.md  README_ANALYSIS_GUIDES.md  REPLICATION_RESULTS.md  analyze_digital_attitudes_template.py  analyze_mda_comprehensive.py  analyze_mda_template.py  demo_simple.py  generate_fake_mda_data.py  guide_digitalization_attitudes.py  guide_mda_analysis.py  pyproject.toml  setup.py
cntext/: english_nlp.py  hello.py
cntext.egg-info/: PKG-INFO  requires.txt
cntext/io/data/: en_common_SentiWS.yaml  en_valence_Concreteness.yaml  zh_common_DUTIR.yaml  zh_common_HowNet.yaml  zh_valence_ChineseEmoBank.yaml  zh_valence_SixSemanticDimensionDatabase.yaml
cntext/model/: sopmi.py  utils.py
cntext/stats/: utils.py
demos/: README.md  demo_io.py  demo_llm.py  demo_mind.py  demo_model.py  demo_plot.py  demo_stats.py
docs/: cite.md  conf.py  embeddings.md  index.rst  install.md  intro.md  io.md  llm.md  mind.md  model.md  plot.md  requirements.txt
examples/.ipynb_checkpoints/: 03-dictionary-checkpoint.ipynb
examples/output/: 三体_cache.txt
replication/: CHANGELOG.md  README.md  REPLICATION_GUIDE.md  REPLICATION_RESULTS.md  TEST_SUMMARY.md  generate_test_mda_data.py  run_test_analysis.py
replication/test_results/: test_results_complete.csv  validation_report.txt
test_data/: REPLICATION_GUIDE.md  TEST_SUMMARY.md  run_test_analysis.py  temp_corpus.txt  test_mda_dataset.csv
test_data/test_results/: test_results_by_year.csv  word_embeddings.model
