[tool.poetry]
name = "cntext"
version = "3.0.0"
description = "English text analysis library forked from cntext, specialized for social science research with word embeddings, sentiment analysis, semantic projection, and readability metrics. Supports LLM integration via Ollama."
authors = ["Fork Maintainer <your.email@example.com>", "DaDeng (Original Author)"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/cntext"
repository = "https://github.com/yourusername/cntext"
documentation = "https://github.com/yourusername/cntext#readme"
keywords = ["english", "text-mining", "sentiment-analysis", "nlp", "semantic-projection", "word-embeddings", "social-science"]

# 包含非 Python 文件
packages = [
    { include = "cntext" },
]


[tool.poetry.dependencies]
python = "^3.8"
ftfy = "^6.2.0"
jieba = "^0.42"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
matplotlib = "^3.6.0"
PyMuPDF = "^1.25.4"
aiolimiter = "1.2.1"
nest-asyncio = "^1.6.0"
pyecharts = "2.0.0"
gensim = "^4.2.0"
nltk = "^3.8"
pandas = "^2.2.0"
chardet = "^5.0.0"
h5py = "^3.9.0"
distinctiveness = "^0.14.6"
networkx = "^3.2"
tqdm = "^4.66.4"
scipy = "^1.12.0"
python-docx = "^1.1.2"
opencc-python-reimplemented = "^0.1.6"
ollama = "^0.2.1"
pydantic="^2.11.7"
instructor="^1.11.2"
openai = "^1.107.0"
PyYAML='^6.0.2'
contractions='^0.1.73'
spacy = {version = "^3.0.0", optional = true}  # Enhanced English NLP

[tool.poetry.extras]
english = ["spacy"]  # Install with: pip install cntext[english]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[options]
package_data = "data/*.yaml"
include_package_data = true
zip_safe = false